// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultTag "deprecated" Vaults 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-deprecatedTag-4 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Obsolete
    </span>
  </div>
</div>
`;

exports[`VaultTag "experimental" Vaults 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-experimentalTag-5 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Trial Run
    </span>
  </div>
</div>
`;

exports[`VaultTag "guarded" Vaults 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-guardedTag-3 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Guarded
    </span>
  </div>
</div>
`;

exports[`VaultTag "new" Vaults 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-newTag-2 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      New
    </span>
  </div>
</div>
`;

exports[`VaultTag "open" Vaults 1`] = `<div />`;
